# humilis-vrf-rs

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
contracts/: Cargo.toml
contracts/abi/: vrfcoordinator.abi.json
contracts/src/: lib.rs
contracts/src/contracts/: erc20.rs  vrfcoordinator.rs
examples/: basic.rs
vrf/: Cargo.toml
vrf/src/openssl/: mod.rs
