[package]
name = "vrf"
version = "0.2.4"
description = "Fast and extensible Verifiable Random Function (VRF) library; currently supporting secp256k1, secp256r1 and sect163k1 curves"
keywords = ["vrf", "ecvrf", "secp256k1", "p256", "k163"]
categories = ["algorithms", "cryptography"]
license = "MIT"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"
homepage = "https://github.com/witnet/vrf-rs"
documentation = "https://docs.rs/vrf/"
repository = "https://github.com/witnet/vrf-rs"
readme = "README.md"
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "witnet/vrf-rs", branch = "master" }

[dependencies]
failure = "0.1.8"
openssl = "0.10.38"
hmac-sha256 = "1.1.2"
hex = "0.3.2"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "27d5ba9", features = ["contract", "network", "node-bindings", "providers", "provider-http", "provider-ipc", "provider-ws", "rpc-client", "rpc-client-ipc", "rpc-client-ws", "rpc-types-eth", "rpc-types-trace", "signers", "signer-keystore", "signer-ledger", "signer-mnemonic", "signer-trezor", "signer-wallet", "signer-yubihsm"] }

[dev-dependencies]
clap = "2.32.0"
hex = "0.3.2"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"

[features]
vendored = ["openssl/vendored"]
