[workspace]
members = ["client", "contracts", "vrf"]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls"] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "27d5ba9", features = [
  "contract",
  "network",
  "node-bindings",
  "providers",
  "provider-http",
  "provider-ipc",
  "provider-ws",
  "rpc-client",
  "rpc-client-ipc",
  "rpc-client-ws",
  "rpc-types-eth",
  "rpc-types-trace",
  "signers",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-wallet",
  "signer-yubihsm",
] }

tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
eyre = "0.6.12"
reqwest = { version = "0.12", default-features = false }       # same as alloy

log = "0.4.21"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
